css/styles.css
:root:not([data-theme=dark]),
[data-theme=light] {
  --pico-mark-gradient: linear-gradient(to right, #000000, #333333, #666666, #666666);
}

body > main .container:last-child {
  margin-bottom: 0;
}

body > main {
  padding-block: 0;
}

body > header .container,
body > footer .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.text-center {
  text-align: center;
}

mark {
  padding: 0;
  background: var(--pico-mark-gradient);
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  white-space: nowrap;
}

@media (min-width: 768px) {
  mark {
    font-size: 2.5rem;
  }
}

.hero {
  text-align: center;
  padding-bottom: 1rem;
  padding-top: 1rem;
}

.hero-small {
  padding-bottom: 1rem;
  padding-top: 1rem;
}

@media (min-width: 1280px) {
  .hero {
    padding-top: 15vh;
    padding-bottom: 15vh;
  }

  .hero mark {
    font-size: 3.2rem;
  }

  .hero-small {
    padding-top: 7vh;
    padding-bottom: 7vh;
  }
}

hgroup > :not(:first-child):last-child {
  margin-top: 1rem;
}

@media (min-width: 768px) {
  .grid-2 {
    grid-template-columns: 1fr 1fr;
  }

  .grid-3-small {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.grid-3-small article {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 8rem;
}

.grid-3-small article h3 {
  text-align: center;
  margin-bottom: 0;
  font-weight: normal;
}

a[role="button"].primary {
  background: var(--pico-mark-gradient);
  border: none;
}

.grid-small article {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 8rem;
}

.grid-small article h4 {
  text-align: center;
  margin-bottom: 0;
  font-weight: normal;
}


code {
  line-height: 1.5;
}

.logo {
  height: 30px;
}

@media (min-width: 768px) {
  .logo {
    height: 40px;
  }
}

